--- a/posts/2024-11-25.md
+++ b/posts/2024-11-25.md
@@ -67,8 +67,8 @@ Consider for example, a reporting query like so:
   SELECT client.name, AVG(sales.amount)
     FROM client, sales
    WHERE client.c_id = sales.c_id
-     AND sales.amount > 100;
-GROUP BY client.name
+     AND sales.amount > 100
+GROUP BY client.name;
 ```
 Although this brings together information from `client` and `sales`, with each record potentially altering some result, the output would be as if executed instantly at some vertical line dropped through the timelines of the tables.
 If every `sales.c_id` has a corresponding `client.c_id`, we will be sure to incorporate each of them.
@@ -99,7 +99,7 @@ Materialize will assign explicit times to each inbound update to ensure transact
 Concretely, Materialize represents all updates as triples `(data, time, diff)`. 
 * The `data` component is the row that experiences a change.
 * The `time` component is the moment on the timeline when the update occurs.
-* The `diff` copmonent is best thought of as either "insert" or "delete".
+* The `diff` component is best thought of as either "insert" or "delete".
 
 Transactional consistency is provided by having updates in a transaction use identical `time` coordinates.
 
@@ -280,7 +280,7 @@ SELECT * FROM big_sales JOIN client_vol ON (c_id)
 Here we've created several views, each with an output timeline, as well as a query that brings the views together.
 Despite no knowledge that the views were designed to be used together, Materialize ensures that they can only be viewed consistently.
 
-I've also shiften the arrowheads `-->` around to remind you that it may not be what you think.
+I've also shifted the arrowheads `-->` around to remind you that it may not be what you think.
 Although each view cannot be farther ahead than its inputs, their progress isn't necessarily in any other order.
 Materialize is in charge of tracking what outputs are locked in for each view on your behalf, which it uses to inform how it should respond to your queries.
 
